# tiralabra-2022

./: .coverage  .coveragerc  .gitignore  README.md  data.json  maarittelydokumentti.md  opetusNakyma.py  pyproject.toml  sovellus.py  viikkoraportti1.md
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  opetusdataan_lisatyt_kappaleet.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: aloitusNakyma.py  aloitusnakyma.py  arpoja.py  jsonFunktiot.py  json_funktiot.py  kappaleNakyma.py  kappaleen_generoiminen.py  kappaleen_luonti.py  kappaleen_soittaminen.py  kappalenakyma.py  kayttoliittyma.py  nakyma.py  opetus_nakyma.py  opetusdataan_datan_lisaaminen.py  opetusnakyma.py  soittaja.py  solmu.py  sovellus.py  syotetyn_kappaleen_tarkistus.py  testi.py  trierakenne.py  viestinakyma.py
src/tests/: arpoja_test.py  json_funktiot_test.py  kappaleen_generoiminen_test.py  kappaleen_luonti_test.py  kappaleen_soittaminen_test.py  kappaleen_tarkistus_test.py  opetusdataan_lisaaminen_test.py  solmu_test.py  suorituskyvyn_testaus.py  trierakenne_test.py
