[tool.poetry]
name = "tiralabra-2022"
version = "0.1.0"
description = ""
authors = ["Anna Suuronen <annasuuronen@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
musicalbeeps = "^0.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
